manifests/wordpress/wp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: wordpress
  name: wp-svc
  labels:
    app: wp
spec:
  ports:
    - port: 80
  selector:
    app: wp
  type: ClusterIP
