manifests/wordpress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ingress
  namespace: wordpress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
      - wp.com
    secretName: wp-tls
  rules:
    - host: wp.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: wp-svc
              port:
                number: 80
